# agora

./: .envrc  README.md  pyproject.toml  pytest.ini
src/agora/: check.py  exceptions.py  helper.py  helpers.py  models.py  ref_data.py  solutions.py
src/agora/solutions/: bfs.py  naive.py
src/devtools/: hello_world.py  playground_brute.ipynb
unit_tests/src/: test_models.py
unit_tests/src/agora/: test_hello_world.py  test_helper.py  test_helpers.py  test_models.py  test_solutions.py
unit_tests/src/agora/solutions/: test_bfs.py  test_naive.py
