[project]
name = "agora"
version = "0.1.0"
description = ""
authors = [
    {name = "Xavier Mandeng",email = "mandeng@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pathlib (>=1.0.1,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
mypy = "^1.15.0"
python-dotenv = "^1.1.0"
pre-commit = "^4.2.0"
pandas-stubs = "^2.2.3.250308"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
max-line-length = 100
extend-ignore = ["E303", "E731", "E501", "N815", "E203"]

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist

    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/
    '''
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
skip = ["docs/", "build/", ".git", ".eggs", "__pycache__"]
